# xbyak_loongarch64

./: .gitignore  CMakeLists.txt  vcpkg.json
sample/: CMakeLists.txt  add.cpp  add2.cpp  bf.cpp  bf_loongarch.cpp  direct_write.cpp  div.cpp  dump.cpp  label.cpp  mul.cpp  strcat.cpp  strcmp.cpp  strcpy.cpp  strlen.cpp  strstr.cpp  test.cpp
src/: xbyak_loongarch64_impl.h  xbyak_loongarch64_mnemonic.h
test/: CMakeLists.txt  add_sub_imm.cpp  make_nm_fp_loongarch.cpp  make_nm_lasx.cpp  make_nm_loongarch.cpp  meta_mnemonic.cpp  mov_imm.cpp
xbyak_loongarch64/: xbyak_loongarch64.h  xbyak_loongarch64_adr.h  xbyak_loongarch64_code_array.h  xbyak_loongarch64_err.h  xbyak_loongarch64_gen.h  xbyak_loongarch64_meta_mnemonic.h  xbyak_loongarch64_mnemonic_def.h  xbyak_loongarch64_reg.h  xbyak_loongarch64_util.h
